# 3DGame

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-gcc14.sh  build-vs2022.bat  run-clang-format.bat  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
cmake/: FetchVcpkg.cmake  OutOfSourceBuild.cmake  glslang_compiler.cmake
docker/: Dockerfile
script/: RunClangFormat.cmake  build-gcc14.sh  build-vs2022.bat  gen-vs2022-clang.bat  gen-vs2022.bat
src/Editor/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  ImGuiSTL.h  ImGuiUtils.h  main.cpp
src/Editor/Panels/: EditorPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  LogPanel.cpp  LogPanel.h  PanelManager.cpp  PanelManager.h
src/Engine/: Application.cpp  Application.h  CMakeLists.txt  Entrypoint.h  Event.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.cpp  Input.h  KeyCode.cpp  KeyCode.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h
src/Engine/SDL3/: SDL3Helper.cpp  SDL3Helper.h  SDL3Window.cpp  SDL3Window.h
src/Game/: AssimpImporter.cpp  AssimpImporter.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  GeometryGenerator.cpp  GeometryGenerator.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  Terrain.cpp  Terrain.h  TestLayer.cpp  TestLayer.h  main.cpp
src/Game/Shaders/: fullscreen.slang  fullscreen_quad.frag.glsl  fullscreen_quad.vert.glsl  mesh.frag.glsl  mesh.slang  mesh.vert.glsl  mesh_aabb.slang  mesh_show_normals.slang  skybox.slang  terrain.slang  triangle.frag.glsl  triangle.vert.glsl  triangle_tex.frag.glsl  triangle_tex.vert.glsl
src/Game/Shaders/include/: buffers.slang
src/Game/Spirv/: SpirvReflection.cpp  SpirvReflection.h
src/Game/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.h  VulkanUtils.cpp  VulkanUtils.h
src/Game/data/model/edf_soldier/: edf_soldier_a.mtl
src/Game/data/textures/pattern_215/: T_215_d.tga  T_215_n.tga
src/Game/data/textures/pattern_216/: T_216_d.tga  T_216_n.tga
src/Game/data/textures/pattern_218/: T_218_d.tga  T_218_n.tga
src/Game/data/textures/pattern_91/: T_91_d.tga
src/Game/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanGraphicPipeline.cpp  VulkanGraphicPipeline.h  VulkanImGuiRenderer.cpp  VulkanImGuiRenderer.h  VulkanShaderProgram.cpp  VulkanShaderProgram.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtils.cpp  VulkanUtils.h  vulkan.h
src/Game/vulkan/vma/: vma.h
tests/: CMakeLists.txt
vcpkg/overlay-ports/alsa/: portfile.cmake
vcpkg/overlay-ports/dbus/: portfile.cmake
vcpkg/overlay-ports/imgui/: portfile.cmake  vcpkg.json
vcpkg/overlay-ports/spdlog-stdformat/: portfile.cmake  vcpkg.json
vcpkg/overlay-ports/stb/: FindStb.cmake  portfile.cmake  vcpkg.json
